--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -30,6 +35,7 @@ body {
   min-height: 100vh;
   align-items: center;
   justify-content: center;  
+  background-color: #FFF7ED;
 }
 
 h1 {
